[gd_scene load_steps=8 format=2]

[ext_resource path="res://gamescene.gd" type="Script" id=1]
[ext_resource path="res://art/bg.png" type="Texture" id=2]
[ext_resource path="res://cam.gd" type="Script" id=3]
[ext_resource path="res://player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Wall_Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/wall.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 15.6897 )

[node name="Gamescene" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="." index="0"]

position = Vector2( 320, 240 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="cam" type="Camera2D" parent="." index="1"]

position = Vector2( 296, 240 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 3 )

[node name="Player" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 199.446, 96.3989 )

[node name="Wall_Spawner" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 671.423, 111.06 )

[node name="fieldwall" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 320, -16 )
scale = Vector2( 10.125, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="fieldwall" index="0"]

texture = ExtResource( 6 )
_sections_unfolded = [ "Animation", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="fieldwall" index="1"]

position = Vector2( 0, -1.67308 )
scale = Vector2( 1, 0.945607 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="leveltimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 15.0
one_shot = false
autostart = true

[connection signal="gameover" from="Player" to="." method="_on_Player_gameover"]

[connection signal="laser_spawned" from="Wall_Spawner" to="." method="_on_Wall_Spawner_laser_spawned"]

[connection signal="wall_spawned" from="Wall_Spawner" to="." method="_on_Wall_Spawner_wall_spawned"]

[connection signal="timeout" from="leveltimer" to="." method="_on_leveltimer_timeout"]


